# tech-challenge-phase-1

./: .coveragerc  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  metrics-server.yaml  pyproject.toml  ruff.toml
.github/workflows/: db-migrate.yaml  deploy-app.yaml  lint-and-test.yml  lint.yml
k8s/: alembic-config.yaml  deployment.yaml  hpa.yaml  image-config.yaml  ingress.yaml  postgres.yaml  service.yaml  setup.md
migrations/: env.py
migrations/versions/: 202405191536-648bcbec70ef-create_tables.py  202405251943-3d4308374177-add_product_table.py  202405252038-a1242ea8396e-add_product_table.py  202405261446-1148fe37860d-add_orders_table.py  202405262209-350e7d349a60-order_tables.py  202407121214-14ff6315964a-use_enumeration_for_product_category.py  202407121418-cf30b4b60e96-use_enumeration_for_order_status.py  202407121743-ef950d606aa3-refactor_order.py  202407201521-1e10e08e89c2-add_payment_table.py  202407261719-9d2a815e86a2-update_enumeration_for_order_status.py  202407262018-bc1eb1c06dda-update_enumeration_for_order_status.py  202407271816-e4134fa90001-add_payment_pending_and_processing_to_.py  202407271938-76f4b0ebfcae-merge_heads.py
postman-collection/: Tech challenge API.postman_collection.json
src/: main.py
src/adapter/: __init__.py
src/api/: app.py  dependencies.py
src/config/: __init__.py  env_settings.py
src/k8s/: deployment.yaml  hpa.yaml  ingress.yaml  push_image.md  service.yaml
src/payment/: __init__.py  payment_gateway.py
tests/: conftest.py
(+195 files in other folders)
